fix: adjusted pages in the 'Percursos' area to resolve header overlap

--- a/src/app/percursos/page.module.css
+++ b/src/app/percursos/page.module.css
@@ -9,7 +9,7 @@
 .backgroundRectangle {
   background-color: #edf6ff;
   width: 100%;
-  height: 25rem;
+  height: 27rem;
   padding: 1rem 0;
   margin: 0; 
   position: relative;
