--- a/src/app/percursos/seguranca-da-informacao/page.module.css
+++ b/src/app/percursos/seguranca-da-informacao/page.module.css
@@ -150,7 +150,7 @@
 }
 
 .map {
-  margin: -4%;
+  margin: -2%;
   text-align: center;
 }
 
@@ -201,7 +201,7 @@
 .card {
   background-color: #fff;
   border: 1px solid #ddd;
-  height: 14rem;
+  height: 15rem;
   border-radius: 8px;
   padding: 16px;
   box-shadow: 9px 11px 11px -8px rgba(0, 0, 0, 0.17);
@@ -212,7 +212,7 @@
   transform: translateY(-10px); 
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.25); 
   background-color: #f7f7ff; 
-  border-color: #6747c7; 
+  border-color: #6747c7;
   cursor: pointer; 
 }
 
@@ -223,7 +223,7 @@
 }
 
 .card:hover h3 {
-  color: #6747c7; /* Altera a cor do título ao passar o mouse */
+  color: #6747c7; 
 }
 
 .card p {
@@ -232,7 +232,7 @@
 }
 
 .card:hover p {
-  color: #333; /* Torna o texto mais destacado ao passar o mouse */
+  color: #333; 
 }
 
 .footer {
@@ -260,6 +260,114 @@
 .node-clicked {
   stroke: #e0e4ff;
   stroke-width: 5px;
+}
+
+.selectedCard {
+  background-color: #e0e4ff;
+  border-color: #6747c7;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.35);
+  transform: translateY(-5px);
+  transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+@media (max-width: 768px) {
+  .courseCards {
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .iconTitle {
+    width: 100%;
+    margin: 0;
+    justify-content: center;
+  }
+
+  .title {
+    font-size: 3rem;
+    text-align: center;
+  }
+
+  .labs {
+    margin-top: 2rem;
+    text-align: center;
+  }
+
+  .labsText {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+
+  .labs h3 {
+    font-size: 1.25rem;
+  }
+
+  .labs ul {
+    margin-left: 0;
+  }
+
+  .icon {
+    width: 4rem;
+    height: 4rem;
+    margin: 0;
+  }
+}
+
+/* Ajustes para dispositivos móveis (telas muito pequenas) */
+@media (max-width: 480px) {
+  .title {
+    font-size: 2.5rem;
+  }
+
+  .objectives li {
+    font-size: 16px;
+  }
+
+  .labs h3 {
+    font-size: 1.2rem;
+  }
+
+  .labs ul {
+    font-size: 16px;
+  }
+
+  .labsText ul {
+    margin-left: 0;
+  }
+
+  .labs ul li {
+    font-size: 1.2rem;
+  }
+
+  .footer {
+    padding: 15px;
+  }
+
+  .footerLink {
+    font-size: 14px;
+  }
+}
+
+#roadmap svg {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+
+.footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #2C274B;
+  color: #FFFFFF;
+}
+
+.footerLink {
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 .selectedCard {
